# chesserp-py-sdk

./: .env.example  .gitignore  .zshrc  CLAUDE.md  PENDIENTES.md  PROJECT_CONTEXT.md  README.md  dump_examples.py  json_ejemplo_ventas  live_test.py  main.py  mis_proyectos  pyproject.toml  requirements.txt  setup_db.sh  smoke_test.py  usage_example.py
.engram/: manifest.json
chesserp/: __init__.py  _base.py  client.py  exceptions.py  sales.py  stock.py  web_client.py
chesserp/config/: settings.py
chesserp/models/: __init__.py  clients.py  inventory.py  marketing.py  orders.py  pricing.py  routes.py  sales.py  staff.py
chesserp/services/: __init__.py  customers.py  inventory.py  marketing.py  orders.py  pricing.py  reports.py  routes.py  sales.py  staff.py
data/: columnas_importantes.txt
data/api-doc/: Cat__logo API ChessERP.html
data/processed/: stock_response.txt
docs/plans/: 2026-02-23-test-suite-design.md
src/: client.py  endpoints.py  logger.py  stock.py
src/config/: settings.py
src/models/: clients.py  inventory.py  marketing.py  orders.py  routes.py  sales.py  staff.py
tests/: conftest.py  data_tests.ipynb  test_client.py  test_customers.py  test_inventory.py  test_marketing.py  test_orders.py  test_pricing.py  test_reports.py  test_routes.py  test_sales.py  test_staff.py
